--- a/Education/Education/Design Patterns/Behavioral/Observer/Documentation.strings
+++ b/Education/Education/Design Patterns/Behavioral/Observer/Documentation.strings
@@ -1,3 +1,5 @@
 /* 
-    Observer is a publish/subscribe pattern which allows a number of observer objects to see an event.
+    EN: Observer is a publish/subscribe pattern which allows a number of observer objects to see an event.
+ 
+    RU: Определяет зависимость типа «один ко многим» между объектами таким образом, что при изменении состояния одного объекта все зависящие от него оповещаются об этом событии.
 */
